force-app/main/default/objects/B25__Staff__c/B25__Staff__c.object-meta.xml
<CustomObject>
    <description>Staff for which users can make Reservations.</description>
    <label>Staff</label>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>