force-app/main/default/objects/B25__Staff__c/fields/B25__Contact__c.field-meta.xml
<CustomField>
    <fullName>B25__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact record linked to a Staff record.</description>
    <inlineHelpText>Le contact lié à ce personnel.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff</relationshipLabel>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>