force-app/main/default/objects/B25__Staff__c/fields/B25__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the Staff record cannot be linked to Reservations.</description>
    <inlineHelpText>Lorsque cette case n’est pas cochée, aucune réservation ne peut être faite pour ce personnel.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>