force-app/main/default/objects/B25__Staff__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User record linked to a Staff record.</description>
    <inlineHelpText>L’utilisateur lié à ce personnel.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>